--- a/management/univention-management-console-module-diagnostic/debian/changelog
+++ b/management/univention-management-console-module-diagnostic/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-diagnostic (1.0.5-1) unstable; urgency=low
+
+  * Bug #35864: add translation, remove all plugins except network and
+  	security_limits
+
+ -- Florian Best <best@univention.de>  Mon, 06 Oct 2014 16:45:37 +0200
+
 univention-management-console-module-diagnostic (1.0.4-2) unstable; urgency=low
 
   * Bug #35864: Add missing dependencies
