* Bug #35864: fix typo
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54198 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-diagnostic/debian/changelog
+++ b/management/univention-management-console-module-diagnostic/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-diagnostic (1.0.6-1) unstable; urgency=low
+
+  * Bug #35864: fix typo
+
+ -- Florian Best <best@univention.de>  Mon, 06 Oct 2014 17:02:55 +0200
+
 univention-management-console-module-diagnostic (1.0.5-1) unstable; urgency=low
 
   * Bug #35864: add translation, remove all plugins except network and
