* Use PasswordBox for respective input fields (Bug #35945)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54200 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (4.0.0-24) unstable; urgency=low
+
+  * Use PasswordBox for respective input fields (Bug #35945) 
+
+ -- Erik Damrose <damrose@univention.de>  Mon, 06 Oct 2014 17:24:09 +0200
+
 univention-virtual-machine-manager-daemon (4.0.0-23) unstable; urgency=low
 
   * UMC design adaptions (Bug #35945) 
