* Bug #35654: version bump to corresponding npm version
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54201 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/npm/debian/changelog
+++ b/management/npm/debian/changelog
@@ -1,3 +1,9 @@
+npm (1.4.27-1) unstable; urgency=medium
+
+  * Bug #35654: version bump to corresponding npm version
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 06 Oct 2014 18:09:10 +0200
+
 npm (0.0.2-3) unstable; urgency=low
 
   * Bug #35654: version bump
