* Bug #35823: version bump to corresponding upstream version
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54202 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/stylus/debian/changelog
+++ b/management/stylus/debian/changelog
@@ -1,3 +1,9 @@
+stylus (0.48.1-1) unstable; urgency=medium
+
+  * Bug #35823: version bump to corresponding upstream version
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 06 Oct 2014 18:18:19 +0200
+
 stylus (0.0.0-12) unstable; urgency=low
 
   * Bug #35654: version bump
