--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.15-3) unstable; urgency=low
+
+  * Bug #35877: Re-build
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 07 Oct 2014 10:34:03 +0200
+
 ucs-test (5.0.15-2) unstable; urgency=low
 
   * Bug #36045: Add explicit dependency on fakeroot
