--- a/test/ucs-windows-tools/debian/changelog
+++ b/test/ucs-windows-tools/debian/changelog
@@ -1,3 +1,10 @@
+ucs-windows-tools (1.0.0-14) unstable; urgency=low
+
+  * added set-gateway.vbs to windows-scripts
+  * aded function set_gateway to lib/winexe.py (Bug #36001)
+
+ -- Drees Dormann <dormann@univention.de>  Tue, 07 Oct 2014 11:37:22 +0200
+
 ucs-windows-tools (1.0.0-13) unstable; urgency=low
 
   * fixed get_root_certificate (Bug #35855)
