--- a/management/univention-management-console-module-diagnostic/debian/changelog
+++ b/management/univention-management-console-module-diagnostic/debian/changelog
@@ -1,3 +1,11 @@
+univention-management-console-module-diagnostic (1.0.7-1) unstable; urgency=low
+
+  * Bug #35864: Add PLugin docstring, inherit from dgrid instead of
+  	GalleryPane, add some misssing translations, outsource CSS into external
+  	file
+
+ -- Florian Best <best@univention.de>  Tue, 07 Oct 2014 11:42:15 +0200
+
 univention-management-console-module-diagnostic (1.0.6-1) unstable; urgency=low
 
   * Bug #35864: fix typo
