--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console (7.1.9-1) unstable; urgency=low
+
+  * Bug #35654: fix translation of UMC modules
+  * outsource error handling into a function
+
+ -- Florian Best <best@univention.de>  Tue, 07 Oct 2014 14:00:37 +0200
+
 univention-management-console (7.1.8-1) unstable; urgency=medium
 
   * Bug #35654: add fallback for favorites
