--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.15-4) unstable; urgency=medium
+
+  * Bug #35319: Fix timing bug in 51_samba4/48file_access_permissions-fACL
+
+ -- Arvid Requate <requate@univention.de>  Tue, 07 Oct 2014 15:15:13 +0200
+
 ucs-test (5.0.15-3) unstable; urgency=low
 
   * Bug #35877: Re-build
