* Bug #35654: show buttons in the module header
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54227 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-quota/debian/changelog
+++ b/base/univention-quota/debian/changelog
@@ -1,3 +1,9 @@
+univention-quota (9.1.1-1) unstable; urgency=low
+
+  * Bug #35654: show buttons in the module header
+
+ -- Florian Best <best@univention.de>  Tue, 07 Oct 2014 15:28:19 +0200
+
 univention-quota (9.1.0-2) unstable; urgency=low
 
   * Bug #35654: UMC design adaptions
