--- a/management/univention-join/debian/changelog
+++ b/management/univention-join/debian/changelog
@@ -1,3 +1,9 @@
+univention-join (7.1.0-3) unstable; urgency=low
+
+  * Bug #35654: move footer buttons into header buttons
+
+ -- Florian Best <best@univention.de>  Mon, 06 Oct 2014 14:32:22 +0200
+
 univention-join (7.1.0-2) unstable; urgency=low
 
   * Bug #35654: UMC design adaptions
