* Bug #35319: Fix timing bug in 51_samba4/48file_access_permissions-fACL
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@54229 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.167-3) unstable; urgency=low
+
+  * Bug #35319: Fix timing bug in 51_samba4/48file_access_permissions-fACL
+
+ -- Arvid Requate <requate@univention.de>  Tue, 07 Oct 2014 15:43:30 +0200
+
 ucs-test (4.0.167-2) unstable; urgency=low
 
   * 13_indirect_group_user_memberships_file_access: give the group cache
