--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (4.1.5-1) unstable; urgency=low
+
+  * Bug #35654: move buttons into module header
+
+ -- Florian Best <best@univention.de>  Tue, 07 Oct 2014 15:45:18 +0200
+
 univention-management-console-module-appcenter (4.1.4-3) unstable; urgency=low
 
   * Bug #35716: Adjustments for slightly new PackageManager API
