--- a/virtualization/univention-virtual-machine-manager-daemon/doc/univention-virtual-machine-manager.8
+++ b/virtualization/univention-virtual-machine-manager-daemon/doc/univention-virtual-machine-manager.8
@@ -185,10 +185,10 @@ values are \fBdisk\fP, \fBcdrom\fP, \fBfloppy\fP.
 List the known groups. 
 .TP
 \fBunivention\-virtual\-machine\-manager\fP nodes default
-List the known nodes in the \fIdefaults\fP group. 
+List the known nodes in the \fIdefaults\fP group.
 .TP
-\fBunivention\-virtual\-machine\-manager\fP query xen://xen.server.local/
-Query the state of server \fIxen://xen.server.local/\fP.
+\fBunivention\-virtual\-machine\-manager\fP query qemu://qemu.server.local/system
+Query the state of server \fIqemu://qemu.server.local/system\fP.
 
 .SH FILES
 .TP
