--- a/virtualization/univention-virtual-machine-manager-node/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-node/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-node (3.0.1-1) unstable; urgency=low
+
+  * Bug #35656 UVMM: Drop Xen support
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 07 Oct 2014 15:33:30 +0200
+
 univention-virtual-machine-manager-node (3.0.0-1) unstable; urgency=low
 
   * UCS-4.0 version bump (Bug #35425)
