--- a/virtualization/univention-virtual-machine-manager-schema/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-schema/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-schema (5.0.1-5) unstable; urgency=low
+
+  * Bug #35656 UVMM: Drop Xen support
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 07 Oct 2014 15:55:09 +0200
+
 univention-virtual-machine-manager-schema (5.0.1-4) unstable; urgency=low
 
   * Added available cloud types to joinscript (Bug #35943)
