* Bug #35319: Fix timing issue in 51_samba4/52replication_sysvol
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54236 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.15-5) unstable; urgency=medium
+
+  * Bug #35319: Fix timing issue in 51_samba4/52replication_sysvol
+
+ -- Arvid Requate <requate@univention.de>  Tue, 07 Oct 2014 16:22:49 +0200
+
 ucs-test (5.0.15-4) unstable; urgency=medium
 
   * Bug #35319: Fix timing bug in 51_samba4/48file_access_permissions-fACL
