--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.167-4) unstable; urgency=low
+
+  * Bug #35319: Fix timing issue in 51_samba4/52replication_sysvol
+
+ -- Arvid Requate <requate@univention.de>  Tue, 07 Oct 2014 16:25:03 +0200
+
 ucs-test (4.0.167-3) unstable; urgency=low
 
   * Bug #35319: Fix timing bug in 51_samba4/48file_access_permissions-fACL
