* Bug #35654: fix switching of language * don't display standby animation in the module header * fix adding items to MultiObjectSelect * remove ContainerWidget.scrollable * fix exception in Form.js because of using lang.getObject
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54238 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,13 @@
+univention-management-console-frontend (4.1.31-1) unstable; urgency=low
+
+  * Bug #35654: fix switching of language
+  * don't display standby animation in the module header
+  * fix adding items to MultiObjectSelect
+  * remove ContainerWidget.scrollable
+  * fix exception in Form.js because of using lang.getObject
+
+ -- Florian Best <best@univention.de>  Tue, 07 Oct 2014 17:36:08 +0200
+
 univention-management-console-frontend (4.1.30-1) unstable; urgency=low
 
   * Bug #35654: fix handling of headerButtons
