* Bug #35654: remove margin-bottom under the search form
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54240 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (5.1.3-1) unstable; urgency=low
+
+  * Bug #35654: remove margin-bottom under the search form
+
+ -- Florian Best <best@univention.de>  Tue, 07 Oct 2014 17:37:14 +0200
+
 univention-management-console-module-udm (5.1.2-1) unstable; urgency=low
 
   * Bug #35654: show (save/back) buttons in the module header
