* preup univention-ldap-config to change LDAP schema matching rule before   slapd dump&restore (Bug #34262)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54243 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,10 @@
+univention-updater (10.0.6-1) unstable; urgency=medium
+
+  * preup univention-ldap-config to change LDAP schema matching rule before
+    slapd dump&restore (Bug #34262)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 08 Oct 2014 11:10:21 +0200
+
 univention-updater (10.0.5-1) unstable; urgency=medium
 
   * Bug #35654: fix refresh on start up, change category
