--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (11.0.5-2) unstable; urgency=medium
+
+  * Configure default eq index for univentionInventoryNumber (Bug #34262)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 08 Oct 2014 11:16:12 +0200
+
 univention-ldap (11.0.5-1) unstable; urgency=medium
 
   * Change default matching rule for univentionInventoryNumber to
