* Bug #35654: rename flavor to "Package Management", remove ContainerWidget.scrollable
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54246 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (4.1.6-1) unstable; urgency=low
+
+  * Bug #35654: rename flavor to "Package Management", remove ContainerWidget.scrollable
+
+ -- Florian Best <best@univention.de>  Wed, 08 Oct 2014 11:28:58 +0200
+
 univention-management-console-module-appcenter (4.1.5-1) unstable; urgency=low
 
   * Bug #35654: move buttons into module header
