* Bug #35654: change handling of displaying helpText
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54247 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (9.0.4-1) unstable; urgency=low
+
+  * Bug #35654: change handling of displaying helpText
+
+ -- Florian Best <best@univention.de>  Wed, 08 Oct 2014 11:31:17 +0200
+
 univention-ad-connector (9.0.3-1) unstable; urgency=low
 
   * Bug #35654: move module into domain category
