* Bug #35654: fix column with of display column, add tree icons
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54248 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (4.0.2-1) unstable; urgency=low
+
+  * Bug #35654: fix column with of display column, add tree icons
+
+ -- Florian Best <best@univention.de>  Wed, 08 Oct 2014 12:06:51 +0200
+
 univention-virtual-machine-manager-daemon (4.0.1-1) unstable; urgency=low
 
   * Bug #35656: Drop Xen support.
