--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (4.0.3-1) unstable; urgency=low
+
+  * Bug #35122: destroy GridUpdater when module gets closed
+
+ -- Florian Best <best@univention.de>  Wed, 08 Oct 2014 13:17:21 +0200
+
 univention-virtual-machine-manager-daemon (4.0.2-1) unstable; urgency=low
 
   * Bug #35654: fix column with of display column, add tree icons
