--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-udm (5.1.4-1) unstable; urgency=low
+
+  * Bug #35654: display tree icons, move position/objecttype into left nav
+  	area
+
+ -- Florian Best <best@univention.de>  Wed, 08 Oct 2014 13:49:28 +0200
+
 univention-management-console-module-udm (5.1.3-1) unstable; urgency=low
 
   * Bug #35654: remove margin-bottom under the search form
