* Bug #35654: fix Text.watch('content')
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54252 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,4 +1,10 @@
-univention-management-console-frontend (.1-1) unstable; urgency=low
+univention-management-console-frontend (4.1.33-1) unstable; urgency=low
+
+  * Bug #35654: fix Text.watch('content')
+
+ -- Florian Best <best@univention.de>  Wed, 08 Oct 2014 14:59:08 +0200
+
+univention-management-console-frontend (4.1.32-1) unstable; urgency=low
 
   * Bug #35654: remove user preferences for module help texts and tooltips
 
