* Bug #36101: Extend the ipProtocolSRV syntax for new SRV records   created by Samba 4.2
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54258 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,10 @@
+univention-directory-manager-modules (10.0.15-1) unstable; urgency=medium
+
+  * Bug #36101: Extend the ipProtocolSRV syntax for new SRV records
+    created by Samba 4.2
+
+ -- Arvid Requate <requate@univention.de>  Wed, 08 Oct 2014 18:00:06 +0200
+
 univention-directory-manager-modules (10.0.14-1) unstable; urgency=low
 
   * fixed krb5PrincipalName in macos.py (Bug #35526) 
