* Bug #35654: ignore empty and invalid XML files
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54259 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console (7.1.10-1) unstable; urgency=low
+
+  * Bug #35654: ignore empty and invalid XML files
+
+ -- Florian Best <best@univention.de>  Wed, 08 Oct 2014 18:08:30 +0200
+
 univention-management-console (7.1.9-1) unstable; urgency=low
 
   * Bug #35654: fix translation of UMC modules
