Bug #35900,#16053, #15219, #35909, #35908, #26452: add test scripts
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54272 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,14 @@
+ucs-test (5.0.16-1) unstable; urgency=low
+
+  * Bug #35900: add new script 03_shadowExpire_in_nis_schema
+  * Bug #16053: add new script 103_packages_held_back
+  * Bug #15219: add new script 102_Standard_Paketliste_installation
+  * Bug #35909: add new script 43_proxy/02_squid3_without_cache_restart
+  * Bug #35908: add new script 43_proxy/01_squid_redirector_configuration
+  * Bug #26452: add new script 43_proxy/00_http_proxy_basic_ntlm_auth_check
+
+ -- Ammar Najjar <najjar@univention.de>  Thu, 09 Oct 2014 12:02:10 +0200
+
 ucs-test (5.0.15-5) unstable; urgency=medium
 
   * Bug #35319: Fix timing issue in 51_samba4/52replication_sysvol
