--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-frontend (4.1.35-1) unstable; urgency=low
+
+  * Bug #35654: fix references to tools.umcpCommand when using it with
+  	ProgressBar
+
+ -- Florian Best <best@univention.de>  Thu, 09 Oct 2014 14:13:16 +0200
+
 univention-management-console-frontend (4.1.34-1) unstable; urgency=low
 
   * Bug #35654: remove extra space from LabelPanes, update browser
