* Bug #35654: hide the wizard module flavor after initial UCS configuration
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54275 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/umc/de.po
+++ b/base/univention-system-setup/umc/de.po
@@ -12,9 +12,13 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: umc/setup.xml: 8
+#: umc/setup.xml: 5
 msgid "UCS setup wizard"
 msgstr "UCS-Einrichtungsassistent"
+
+#: umc/setup.xml: 6
+msgid "Configuration of the UCS system"
+msgstr "Konfiguration des UCS-Systems"
 
 #: umc/setup.xml: 13
 msgid "Language settings"
