--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.7-1) unstable; urgency=low
+
+  * Bug #35654: hide the wizard module flavor after initial UCS configuration
+
+ -- Florian Best <best@univention.de>  Thu, 09 Oct 2014 13:20:04 +0200
+
 univention-system-setup (8.1.6-6) unstable; urgency=low
 
   * Bug #33839: Run univention-upgrade after initial join
