Bug #34437 Kernel: Recommend CPU microcode updates
Recommend packages providing microcode updates for ADM and Intel CPUs.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54278 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/kernel/univention-kernel-image/debian/changelog
+++ b/kernel/univention-kernel-image/debian/changelog
@@ -1,3 +1,9 @@
+univention-kernel-image (8.0.3-1) unstable; urgency=low
+
+  * Bug #34437: Recommend CPU microcode updates.
+
+ -- Philipp Hahn <hahn@univention.de>  Thu, 09 Oct 2014 14:59:02 +0200
+
 univention-kernel-image (8.0.2-3) unstable; urgency=low
 
   * Bug #33844: Remove ipw2x00 & ivtv firmware because of interactive licence
