hide unavailable cloud connections in create instance wizard (Bug #36093) add progressbar for create cloud connection wizard (Bug #36093)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54287 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,10 @@
+univention-virtual-machine-manager-daemon (4.0.3-2) unstable; urgency=low
+
+  * hide unavailable cloud connections in create instance wizard (Bug #36093)
+  * add progressbar for create cloud connection wizard (Bug #36093)
+
+ -- Andreas Peichert <peichert@univention.de>  Thu, 09 Oct 2014 17:15:01 +0200
+
 univention-virtual-machine-manager-daemon (4.0.3-1) unstable; urgency=low
 
   * Bug #35122: destroy GridUpdater when module gets closed
