--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.8-1) unstable; urgency=low
+
+  * Bug #35654: hide the certificate wizard on non master systems
+
+ -- Florian Best <best@univention.de>  Thu, 09 Oct 2014 17:37:24 +0200
+
 univention-system-setup (8.1.7-1) unstable; urgency=low
 
   * Bug #35654: hide the wizard module flavor after initial UCS configuration
