* Bug #35654: define background via CSS and a tile image
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54290 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.35-1) unstable; urgency=medium
+
+  * Bug #35654: define background via CSS and a tile image
+
+ -- Alexander Kläser <klaeser@univention.de>  Thu, 09 Oct 2014 18:01:22 +0200
+
 univention-management-console-frontend-theme (0.0.34-1) unstable; urgency=low
 
   * Bug #35654: Add border around TextArea
