--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.36-1) unstable; urgency=medium
+
+  * Bug #35654: IE9 fixes for header buttons and background pattern
+
+ -- Alexander Kläser <klaeser@univention.de>  Thu, 09 Oct 2014 18:20:18 +0200
+
 univention-management-console-frontend-theme (0.0.35-1) unstable; urgency=medium
 
   * Bug #35654: define background via CSS and a tile image
