* Bug #36113: Update replication.py to filter operational ppolicy   overlay attribute oids from schema.conf
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@54294 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-replication/debian/changelog
+++ b/management/univention-directory-replication/debian/changelog
@@ -1,3 +1,10 @@
+univention-directory-replication (7.0.1-10) unstable; urgency=medium
+
+  * Bug #36113: Update replication.py to filter operational ppolicy
+    overlay attribute oids from schema.conf
+
+ -- Arvid Requate <requate@univention.de>  Thu, 09 Oct 2014 20:33:32 +0200
+
 univention-directory-replication (7.0.1-9) unstable; urgency=medium
 
   * Add MEMBEROF to the EXCLUDE_ATTRIBUTES list (Bug #35480)
