* Bug #31907: Remove ACLs for cn=admin, obsoleted by "rootdn" setting
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54297 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (11.0.6-2) unstable; urgency=medium
+
+  * Bug #31907: Remove ACLs for cn=admin, obsoleted by "rootdn" setting
+
+ -- Arvid Requate <requate@univention.de>  Thu, 09 Oct 2014 21:48:03 +0200
+
 univention-ldap (11.0.6-1) unstable; urgency=medium
 
   * Always load the ppolicy schema (Bug #31907)
