* 10_ldap/60failedldif: Use stop and start instead of restart for the   samba restart (Bug #35319)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54298 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (5.0.17-1) unstable; urgency=low
+
+  * 10_ldap/60failedldif: Use stop and start instead of restart for the
+    samba restart (Bug #35319)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 10 Oct 2014 08:16:32 +0200
+
 ucs-test (5.0.16-1) unstable; urgency=low
 
   * Bug #35900: add new script 03_shadowExpire_in_nis_schema
