--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.9-1) unstable; urgency=low
+
+  * Bug #35654: hide the wizard module flavor after initial UCS configuration
+
+ -- Florian Best <best@univention.de>  Fri, 10 Oct 2014 11:27:30 +0200
+
 univention-system-setup (8.1.8-2) unstable; urgency=low
 
   * Bug #35653: Activating AD member mode in system setup
