--- a/virtualization/univention-kvm-virtio/debian/changelog
+++ b/virtualization/univention-kvm-virtio/debian/changelog
@@ -1,3 +1,10 @@
+univention-kvm-virtio (4.0.0-1) unstable; urgency=low
+
+  * Bug #36122: UCS-3.2 Version bump
+  * Update to 0.1-81
+
+ -- Philipp Hahn <hahn@univention.de>  Fri, 10 Oct 2014 11:27:04 +0200
+
 univention-kvm-virtio (3.0.0-1) unstable; urgency=low
 
   * UCS-3.2 Version bump.
