--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.9-2) unstable; urgency=low
+
+  * Bug #35653: Load network settings when in Debian installer mode
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Fri, 10 Oct 2014 12:43:51 +0200
+
 univention-system-setup (8.1.9-1) unstable; urgency=low
 
   * Bug #35654: hide the wizard module flavor after initial UCS configuration
